tests/lex-fail/unicode_chr_length.fl.0.exp
Error: unicode_chr_length.fl(1,3): 8 hexadecimal digits expected for Unicode escape sequence 
'\u0000000
  ^        
